Commit 14: ensure at least one group, tweaked book selection to unselect books, made it so that bottom half of title text is not cut off

--- a/src/index.css
+++ b/src/index.css
@@ -372,7 +372,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .group-book h3 {
-  margin: 10px 0;
+  margin: 5px 0;
 }
 
 .group-book p {
